--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react-dom": "^19.2.4"
   },
   "devDependencies": {
+    "@lit-labs/virtualizer": "^2.1.1",
     "@vitejs/plugin-react": "^5.1.4",
     "archiver": "^7.0.1",
     "canvas": "^3.2.1",
+    "lit": "^3.3.2",
     "vite": "^5.4.11"
   }
 }
